--- a/PracticeWebApp/Traductions/Errors.resx
+++ b/PracticeWebApp/Traductions/Errors.resx
@@ -120,8 +120,20 @@
   <data name="AdelLengthInvalid" xml:space="preserve">
     <value>Adel length  is not equals to 11</value>
   </data>
+  <data name="AnswerInvalid" xml:space="preserve">
+    <value>The answer is not valid</value>
+  </data>
   <data name="CodeEdiIsNotUnique" xml:space="preserve">
     <value>CodeEdi is not unique</value>
+  </data>
+  <data name="FirstNameInvalid" xml:space="preserve">
+    <value>The firstName is not valid</value>
+  </data>
+  <data name="NameInvalid" xml:space="preserve">
+    <value>The name is not valid</value>
+  </data>
+  <data name="PhoneNumberInvalid" xml:space="preserve">
+    <value>Phone number is invalid</value>
   </data>
   <data name="PrismPrescriptionInvalid" xml:space="preserve">
     <value>PrismPrescritpion should not have a value because there is not changes in astigmatism</value>
